Fixed the broken stylesheet

--- a/assets/css/wyf.css
+++ b/assets/css/wyf.css
@@ -1,5 +1,5 @@
 body{
-    font-family: sans-serif;
+    font-family: Helvetica, sans-serif;
     margin:0px;
     font-size:0.9em;
     background-image: url("../images/mainbg.gif");
